// Vitest Snapshot v1

exports[`<Button/> > should render a danger button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1t8hk_1 _danger_1t8hk_19"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a success button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1t8hk_1 _success_1t8hk_23"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a text button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1t8hk_1 _text_1t8hk_27"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;
